Release 1.1.0
	Fixed crash when looking up keys in uninitialized CKeyboard.
	Reset errno if EINTR is received in WaitForKeydata
	Updated to ustl-0.8.0

Release 1.0.0
	Initial release.